tests/fail/sema_strict.tk
// Copyright (c) 2025 YiZhonghua<zhyi@dpai.com>. All rights reserved.
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//     http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.
fn main() {
    // 1. Arithmetic Type Mismatch
    auto i = 1 + 2.0 // Error: operands must be same type

    // 2. Comparison Type Mismatch
    auto c = 1 == "" // Error: operands must be same type
    // EXPECT: error[E0413]:
    
    // 3. If Condition Type Mismatch
    if (1) {} // Error: condition must be bool

    // 4. Dereference Non-Pointer
    auto x = 10
    auto y = *x // Error: cannot dereference non-pointer

    // 5. Variable Type Mismatch
    auto z: i32 = "hello" // Error: mismatch
    // EXPECT: error[E0409]:
}
